# robot-insprill

./: .editorconfig  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.gradle.kts  config.yml  docker-compose.yml  mkdocs.yml  pom.xml  settings.gradle.kts
.github/workflows/: build.yml  rust.yml
configs/: codedred.yml  dev.yml
docs/: index.md  requirements.txt
docs/configuration/: autoactions.md  channelrestrictions.md  config.md  env.md  forms.md  index.md  statchannels.md
docs/configuration/props/: emojis.md  messages.md
docs/contributing/: docs.md  env.md  guides.md  index.md
docs/discord/: perms.md
docs/hosting/: docker.md  index.md  native.md
src/: main.rs
src/command/: binfile.rs  mod.rs
src/main/java/me/Insprill/RI/: RobotInsprill.java
src/main/java/me/Insprill/RI/commands/: BinFile.java  Help.java  ModRoles.java  Prefix.java
src/main/java/me/Insprill/RI/featues/: AntiSpam.java  AuditLog.java  ScammerBanner.java  Suggestions.java
src/main/java/me/Insprill/RI/misc/: Ai.java  Console.java  IDs.java  Join.java  ThreadHandler.java
src/main/java/me/Insprill/RI/storage/: HashMaps.java  SaveAll.java  ServerSettings.java
src/main/java/me/Insprill/RI/utils/: GitHubUtils.java  Logger.java  MuteHandler.java  Pair.java  StopWatch.java
src/main/kotlin/net/insprill/robotinsprill/: RobotInsprill.kt
src/main/kotlin/net/insprill/robotinsprill/audit/: AuditColor.kt  AuditManager.kt
src/main/kotlin/net/insprill/robotinsprill/autoaction/: Action.kt  (+2 more)
src/main/resources/: README.md  bot.properties  logback.xml
(+45 files in other folders)
